--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Bienvenido a mi sitio web</h1>
   <p>Este sitio es gratuito, alojado en GitHub Pages.</p>
 
-  <!-- Aquí irá tu código de Google AdSense más adelante -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1768198199827363"
+  crossorigin="anonymous"></script>
 </body>
 </html>
