--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
+  <nav>
+    <a href="index.html">Inicio</a> |
+    <a href="contacto.html">Contacto</a> |
+    <a href="privacidad.html">Privacidad</a>
+  </nav>
+
   <h1>Bienvenido a mi sitio web</h1>
-  <p>Este sitio es gratuito, alojado en GitHub Pages.</p>
+  <p>Este es un sitio personal donde compartiré contenido interesante, herramientas y recursos útiles.</p>
 </body>
 </html>
