--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Mi Sitio Web</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1768198199827363"
      crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
   <nav>
