--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Sitio Web</title>
+  <meta name="google-adsense-account" content="ca-pub-1768198199827363">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1768198199827363"
      crossorigin="anonymous"></script>
+  <title>Mi Sitio Web</title>
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
