--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <a href="privacidad.html">Privacidad</a>
     <a href="http://ouo.io/ref/Sq11XgpX">
       <img src="http://ouo.io/images/banners/r1.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
+    <a href="http://ouo.io/ref/Sq11XgpX">
+      <img src="http://ouo.io/images/banners/r6.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
+    <a href="http://ouo.io/ref/Sq11XgpX">
+      <img src="http://ouo.io/images/banners/r5.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
   </nav>
 
   <h1>Bienvenido a mi sitio web</h1>
