--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+//<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -14,10 +14,6 @@
     <a href="index.html">Inicio</a> |
     <a href="contacto.html">Contacto</a> |
     <a href="privacidad.html">Privacidad</a>
-    <a href="http://ouo.io/ref/Sq11XgpX">
-      <img src="http://ouo.io/images/banners/r1.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
-    <a href="http://ouo.io/ref/Sq11XgpX">
-      <img src="http://ouo.io/images/banners/r6.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
     <a href="http://ouo.io/ref/Sq11XgpX">
       <img src="http://ouo.io/images/banners/r5.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
   </nav>
