--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <a href="contacto.html">Contacto</a> |
     <a href="privacidad.html">Privacidad</a>
     <a href="http://ouo.io/ref/Sq11XgpX">
-      <img src="http://ouo.io/images/banners/r5.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
+      <img src="http://ouo.io/images/banners/r1.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
   </nav>
 
   <h1>Bienvenido a mi sitio web</h1>
   <p>Este es un sitio personal donde compartiré contenido interesante, herramientas y recursos útiles.</p>
+      <a href="http://ouo.io/ref/Sq11XgpX">
+      <img src="http://ouo.io/images/banners/r6.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
 </body>
 </html>
