--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Inicio</a> |
-    <a href="contacto.html">Contacto</a> |
-    <a href="privacidad.html">Privacidad</a>
     <a href="http://ouo.io/ref/Sq11XgpX">
-      <img src="http://ouo.io/images/banners/r2.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
+        <img src="http://ouo.io/images/banners/r2.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+      <li> <a href="privacidad.html">Privacidad</a></li>
+    </ul>
   </nav>
 
   <h1>Bienvenido a mi sitio web</h1>
