--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <img src="http://ouo.io/images/banners/r2.jpg" title="ouo.io - Make short links and earn the biggest money" /></a>
     <ul>
       <li><a href="index.html">Inicio</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
-      <li> <a href="privacidad.html">Privacidad</a></li>
+      <li><a href="chars.html">Chars</a></li>
+      <li><a href="stages.html">Stages</a></li>
+      <li><a href="screenpacks.html">Screenpacks</a></li>
+      <li><a href="games.html">Games</a></li>
+      <li><a href="requests.html">Requests</a></li>
     </ul>
   </nav>
 
