--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
   <body>
     <header>
-      <h1>Manic MUGENverse</h1>
+      <h1>Manic MUGENVERSE</h1>
     </header>
 
     <nav>
@@ -35,7 +35,7 @@
       </nav>
     
     <main>
-      <h2>¡Bienvenido a Manic Mugenverse!</h2>
+      <h2>¡Bienvenido a Manic MUGENVERSE!</h2>
       <p>Aquí encontrarás mis videos, personajes, stages y más del mundo M.U.G.E.N / I.K.E.M.E.N.</p>
     </main>
 
