--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="navbar">
           <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <a href="index.html">Inicio</a>
             <li><a href="chars.html">Chars</a></li>
             <li><a href="stages.html">Stages</a></li>
             <li><a href="games.html">Games</a></li>
