--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul>
             <a href="index.html">Inicio</a>
             <a href="chars.html">Chars</a>
-            <li><a href="stages.html">Stages</a></li>
+            <a href="stages.html">Stages</a>
             <li><a href="games.html">Games</a></li>
             <li><a href="screenpacks.html">Screenpacks</a></li>
             <!-- <span class="separator">/</span> -->
