--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="navbar">
           <!-- <span class="separator">/</span>  SEPARAR TODO CON SLASHES (/)-->
           <ul>
-            <a href="index.html">Inicio</a>
+            <a href="index.html"> <Font Face="arial"> Inicio </Font> </a>
             <span class="separator">/</span>
             
             <a href="chars.html">Chars</a>
