--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <span class="separator">    <Font Face="arial" Size="3" Color="White"> / </Font> </span>
                 
               <a href="requests.html">    <Font Face="arial" Size="3" Color="White"> <b>REQUESTS</b> </Font> </a>
-            </fieldset> </bodybgcolor>
+            </fieldset>
           </ul>
     
           <!--<a href="index.html">Inicio</a>
