--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="navbar">
           <!-- <span class="separator">/</span>  SEPARAR TODO CON SLASHES (/)-->
           <ul>
-            <fieldset> <font bgcolor=#00FF00> 
+            <fieldset>
               <a href="index.html">       <Font Face="arial" Size="3" Color="White"> <b>INICIO</b> </Font> </a>
               <span class="separator">    <Font Face="arial" Size="3" Color="White"> / </Font> </span>
               
