--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Bienvenido a mi sitio</h1>
-  <p>Este sitio está vinculado a mi canal de YouTube para monetización.</p>
+  <!-- <p>Este sitio está vinculado a mi canal de YouTube para monetización.</p> -->
   
   <!-- Aquí va tu video o enlaces -->
   <iframe width="560" height="315" 
