--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <!-- <p>Este sitio está vinculado a mi canal de YouTube para monetización.</p> -->
   
   <!-- Aquí va tu video o enlaces -->
-  <iframe width="560" height="315" 
+  <iframe width="1280" height="720" 
+    src="https://www.youtube.com/embed/fOZ5Ny3UmCY" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allowfullscreen>
+  </iframe>
+
+    <iframe width="560" height="315" 
     src="https://www.youtube.com/embed/fOZ5Ny3UmCY" 
     title="YouTube video player" 
     frameborder="0" 
