--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
       </div>
       
       <p> Descarga los chars que salen en el video:
+        <p>Team 1</p>
         <a href="https://ouo.io/Epq1H4" target="_blank">Green Lantern</a>
         <a href="https://ouo.io/NRBbEoB" target="_blank">Dora</a>
         <a href="https://ouo.io/T0jAwFN" target="_blank">Snake Eyes</a>
         <a href="https://cuty.io/GERZw63I0a" target="_blank">Sceptile</a>
-        
+        <p>VS</p>
+        <p>Team 2</p>
         <a href="https://cuty.io/H5mBC1QMPU" target="_blank">Thor</a>
         <a href="https://ouo.io/DEgBHb" target="_blank">Trunks</a>
         <a href="https://cuty.io/XULbwBkNe" target="_blank">Invader Zim</a>
