--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       allowfullscreen>
     </iframe>
 
-    <p>Descarga el char de Sonic</p>
-    <a href="http://bc.vc/sgMwTqF" target="_blank">Sonic Char</a>
+    <p Align=Left>Descarga el char de Sonic</p>
+    <a Align=Left href="http://bc.vc/sgMwTqF" target="_blank">Sonic Char</a>
     
     <header>
       <h1>Mi Blog de Batallas y chars de M.U.G.E.N / I.K.E.M.E.N</h1>
