--- a/index.html
+++ b/index.html
@@ -72,12 +72,9 @@
     <!-- <p>Este sitio está vinculado a mi canal de YouTube para monetización.</p> -->
     
     <!-- Aquí va tu video o enlaces -->
-    <iframe width="560" height="315" 
-      src="https://www.youtube.com/embed/fOZ5Ny3UmCY" 
-      title="YouTube video player" 
-      frameborder="0" 
-      allowfullscreen>
-    </iframe>
+    <div class="video-container">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/fOZ5Ny3UmCY" title="YouTube video player"  frameborder="0" allowfullscreen></iframe>
+    </div>
 
     <p Align=Left>Descarga el char de Sonic</p>
     <a Align=Left href="http://bc.vc/sgMwTqF" target="_blank">Sonic Char</a>
