--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     
     <!-- Aquí va tu video o enlaces -->
     <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/fOZ5Ny3UmCY" title="YouTube video player"  frameborder="0" allowfullscreen></iframe>
+      <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/fOZ5Ny3UmCY" title="YouTube video player"  frameborder="0" allowfullscreen></iframe> -->
+      <iframe src="https://www.youtube.com/embed/fOZ5Ny3UmCY" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <p Align=Left>Descarga el char de Sonic</p>
