--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
   </head>
   
   <body>
-    <h1>Bienvenido a mi sitio</h1>
     <!-- <p>Este sitio está vinculado a mi canal de YouTube para monetización.</p> -->
     
+    <header>
+      <h1>Bienvenido a mi blog de batallas y chars de M.U.G.E.N / I.K.E.M.E.N</h1>
+      <p>Descargas, videos, y contenido exclusivo</p>
+    </header>
+
     <!-- Aquí va tu video o enlaces -->
     <div class="video-container">
       <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/fOZ5Ny3UmCY" title="YouTube video player"  frameborder="0" allowfullscreen></iframe> -->
@@ -78,11 +82,6 @@
       <p Align=Left>Descarga el char de Sonic</p>
       <a Align=Left href="http://bc.vc/sgMwTqF" target="_blank">Sonic Char</a>
     </div>
-    
-    <header>
-      <h1>Mi Blog de Batallas y chars de M.U.G.E.N / I.K.E.M.E.N</h1>
-      <p>Descargas, videos, y contenido exclusivo</p>
-    </header>
 
     <div class="container">
       <h2>Disfruta de estas épicas batallas</h2>
