--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
         <li><a href="https://www.youtube.com/watch?v=hJQV7HpDD9Y" target="_blank">Classic Knuckles Boss Chars</a></li>
       </ul>
     </div>
+
+    <footer>
+      © 2025 Mi Canal de YouTube – Todos los derechos reservados
+    </footer>
     
   </body>
 </html>
