--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
     <header>
       <h1>Bienvenido a mi blog de batallas y chars de M.U.G.E.N / I.K.E.M.E.N</h1>
       <p>Descargas, videos, y contenido exclusivo</p>
+
+      <nav>
+        <a href="index.html">Inicio</a>
+        <a href="acerca.html">Acerca de</a>
+        <a href="contacto.html">Contacto</a>
+        <a href="privacidad.html">Privacidad</a>
+      </nav>
     </header>
 
     <!-- Aquí va tu video o enlaces -->
@@ -80,7 +87,7 @@
       <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/fOZ5Ny3UmCY" title="YouTube video player"  frameborder="0" allowfullscreen></iframe> -->
       <iframe src="https://www.youtube.com/embed/fOZ5Ny3UmCY" frameborder="0" allowfullscreen></iframe>
       <p Align=Left>Descarga el char de Sonic</p>
-      <a Align=Left href="http://bc.vc/sgMwTqF" target="_blank">Sonic Char</a>
+      <a Align=Left href="https://www.mediafire.com/file/oyw9wqsw8mkikp2/Sonic+por+M.L.C.zip" target="_blank">Sonic Char</a>
     </div>
 
     <div class="container">
