--- a/contacto.html
+++ b/contacto.html
@@ -10,9 +10,9 @@
   <header>
     <h1>Contacto</h1>
     <nav>
-      <a href="index.html">Inicio</a>
-      <a href="acerca.html">Acerca de</a>
-      <a href="contacto.html">Contacto</a>
+      <a href="index.html">Inicio</a> |
+      <a href="acerca.html">Acerca de</a> |
+      <a href="contacto.html">Contacto</a> |
       <a href="privacidad.html">Privacidad</a>
     </nav>
   </header>
