--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       <p>Descargas, videos, y contenido exclusivo</p>
 
       <nav>
-        <a href="index.html">Inicio</a>
-        <a href="acerca.html">Acerca de</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="index.html">Inicio</a> |
+        <a href="acerca.html">Acerca de</a> |
+        <a href="contacto.html">Contacto</a> |
         <a href="privacidad.html">Privacidad</a>
       </nav>
     </header>
