--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
       
       <p> Descarga los chars que salen en el video:
         <p>Team 1</p>
-        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=154467-green-lantern-enzo-buyog2099-arque-and-mccready" target="_blank">Green Lantern</a>
-        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=11927-dora-pingurules" target="_blank">Dora</a>
-        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=67420-snake-eyes-acey" target="_blank">Snake Eyes</a>
+        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=154467-green-lantern-enzo-buyog2099-arque-and-mccready" target="_blank">Green Lantern</a> |
+        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=11927-dora-pingurules" target="_blank">Dora</a> |
+        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=67420-snake-eyes-acey" target="_blank">Snake Eyes</a> |
         <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=63795-sceptile-jetgoshi-dylanius9000" target="_blank">Sceptile</a>
         <p>VS</p>
         <p>Team 2</p>
-        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=19069-thor-mvc3-acey-loganir-darkwolf-13-and-walruslui" target="_blank">Thor</a>
-        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=172499-ssj-trunksz2i-axellord" target="_blank">Trunks</a>
-        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=181268-zim-v2-wlanmaniax-arthurdm" target="_blank">Invader Zim</a>
+        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=19069-thor-mvc3-acey-loganir-darkwolf-13-and-walruslui" target="_blank">Thor</a> |
+        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=172499-ssj-trunksz2i-axellord" target="_blank">Trunks</a> |
+        <a href="https://mugenarchive.com/forums/downloads.php?do=file&id=181268-zim-v2-wlanmaniax-arthurdm" target="_blank">Invader Zim</a> |
         <a href="https://onedrive.live.com/?redeem=aHR0cHM6Ly8xZHJ2Lm1zL3UvcyFBczItMmFtZUQ3VjdhWjJIaklCNGVvQlI0SzQ%5FZT1PS1ZISTk&cid=7BB50F9EA9D9BECD&id=7BB50F9EA9D9BECD%21sbb4d17f473b447f48a62d6697dd27e76&parId=7BB50F9EA9D9BECD%21s39f6113e184947699484c0e453b21fb6&o=OneUp" target="_blank">Garfield</a>
       </p>
         
