--- a/index.html
+++ b/index.html
@@ -87,16 +87,19 @@
       <!-- Aquí va tu video o enlaces -->
       <div class="video-container">
         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/fOZ5Ny3UmCY" title="YouTube video player"  frameborder="0" allowfullscreen></iframe> -->
-        <iframe src="https://www.youtube.com/embed/fOZ5Ny3UmCY" frameborder="0" allowfullscreen></iframe>
-        <p Align=Left>Descarga el char de Sonic</p>
-        <a Align=Left href="https://www.mediafire.com/file/oyw9wqsw8mkikp2/Sonic+por+M.L.C.zip" target="_blank">Sonic Char</a>
+        <!--<iframe src="https://www.youtube.com/embed/fOZ5Ny3UmCY" frameborder="0" allowfullscreen></iframe>-->
+        <iframe src="https://www.youtube.com/embed/fOZ5Ny3UmCY" style="border: none;" allowfullscreen></iframe>
+        <p class="align-left">Descarga el char de Sonic</p>
+        <div style="text-align: left;">
+          <a href="https://www.mediafire.com/file/oyw9wqsw8mkikp2/Sonic+por+M.L.C.zip">Sonic Char</a>
+        </div>
       </div>
 
       <div class="container">
         <h2>Disfruta de estas épicas batallas</h2>
         
         <div class="video-container">
-          <iframe src="https://www.youtube.com/embed/s9nLm1v5Y9U" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/s9nLm1v5Y9U" style="border: none;" allowfullscreen></iframe>
         </div>
         
         <p> Descarga los chars que salen en el video:
