--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <iframe src="https://www.youtube.com/embed/fOZ5Ny3UmCY" style="border: none;" allowfullscreen></iframe>
         <p class="align-left">Descarga el char de Sonic</p>
         <div style="text-align: left;">
-          <a href="https://www.mediafire.com/file/oyw9wqsw8mkikp2/Sonic+por+M.L.C.zip">Sonic Char</a>
+          <li><a href="https://www.mediafire.com/file/oyw9wqsw8mkikp2/Sonic+por+M.L.C.zip">Sonic Char</a></li>
         </div>
       </div>
 
